--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,8 +1,23 @@
 @import url(resets.css);
+@font-face {
+    font-family: "Pacifico", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+* {
+    font-family: 'Pacifico';
+}
+body{
+    background-color: #dddddd;
+}
 
+a {
+    color: rgb(104, 224, 104);
+}
 .wrap {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     margin: 10px 0 0 0;
 }
@@ -10,17 +25,26 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    border: 1px solid black;
+    border-radius: 25px;
     width: 80%;
-    height: 1000px;
     padding: 20px;
 }
 .left-aside {
     display: flex;
+    background-color: #fff;
     flex-direction: column;
     gap: 40px;
     padding: 20px;
-    border-right: 1px solid blue;
+    border-radius: 25px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.bottom-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.media{
+    text-align: center;
 }
 .contacts{
     display: flex;
@@ -29,10 +53,54 @@
 }
 .right-aside {
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 25px;
+    background-color: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.other__info{
+    display: flex;
+    flex-direction: row;
+}
+.info-about-me{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.about__me h1{
+    font-size: 40px;
+}
+.other__info{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+.skills {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-size: 40px;
 }
 summary {
     background: #c5c5c5;
     padding: 10px;
     border-radius: 25px;
+}
+hr {
+    border: 1px solid rgb(104, 224, 104);
+    width: 40px;
+
+}
+bg-green {
+    color: rgb(104, 224, 104);
+}
+.bg-green{
+    color: rgb(104, 224, 104);
+}
+.icon{
+    color: black;
+    font-size: 30px;
 }
